[gd_scene load_steps=6 format=3 uid="uid://bbbpykewcb80w"]

[ext_resource type="Script" path="res://Entities/player.gd" id="1_wgqbe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nyny6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0uwby"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vdyml"]
size = Vector3(1, 2, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_1k1m2"]
size = Vector3(0.307617, 2, 0.8)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_wgqbe")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_nyny6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0uwby")

[node name="PushArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44081, -1.04182)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="PushArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0.25)
shape = SubResource("BoxShape3D_vdyml")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D2" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.9)
shape = SubResource("BoxShape3D_1k1m2")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
